style(client) : fix overflow in image settings

--- a/client/src/Styles/pages/_image_settings.scss
+++ b/client/src/Styles/pages/_image_settings.scss
@@ -10,6 +10,8 @@
     height: 500px;
     width: 1000px;
 
+    overflow-x: scroll;
+
     box-shadow: 0px 0px 50px 10px $accent;
 
     .head
